Repeat last action doesn't work properly at moving or duplicating objects #62241

Closed
opened 2019-03-06 07:03:17 +01:00 by edwin hernandez · 3 comments

System Information
Operating system: Linux Mint 18.3 Cinnamon 64-bit
Graphics card: Nvidia Geforce 760

Blender Version
Broken: blender-2.80-ecd086ac3224

Repeat last action doesn't work properly at moving or duplicating objects

Exact steps for others to reproduce the error
from default start up file:
top view
move or duplicate de default cube
place the new cube at the right or left of the original one (X axis)
press shift R for repeat last action
moving or copying occurs on the wrong direction
same situation when the copy is placed in front or back of the original (Y axis)

**System Information** Operating system: Linux Mint 18.3 Cinnamon 64-bit Graphics card: Nvidia Geforce 760 **Blender Version** Broken: blender-2.80-ecd086ac3224 **Repeat last action doesn't work properly at moving or duplicating objects** **Exact steps for others to reproduce the error** from default start up file: top view move or duplicate de default cube place the new cube at the right or left of the original one (X axis) press shift R for repeat last action moving or copying occurs on the wrong direction same situation when the copy is placed in front or back of the original (Y axis)

Added subscriber: @EdHernandez

Added subscriber: @EdHernandez
Campbell Barton self-assigned this 2019-03-06 07:05:48 +01:00

This issue was referenced by 3b1e2a4f56

This issue was referenced by 3b1e2a4f5657b88c3d2bd0e3ff7f4ae07da61da7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62241
No description provided.